feat: add controller method to GET /tasks

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   config:
-    import: classpath:env.properties
+    import: classpath:.env.properties
   datasource:
     url: jdbc:postgresql://localhost:5432/ToDoList
     username: postgres
