--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,11 @@
 			<artifactId>spring-boot-starter-webflux</artifactId>
 			<version>3.3.0</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.5.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
