--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -2,9 +2,9 @@ spring:
   config:
     import: classpath:.env.properties
   datasource:
-    url: ${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/mydatabase}
-    username: ${SPRING_DATASOURCE_USERNAME:user}
-    password: ${SPRING_DATASOURCE_PASSWORD:password}
+    url: jdbc:postgresql://localhost:5432/ToDoList
+    username: ${DB_USER}
+    password: ${DB_PASS}
     driver-class-name: org.postgresql.Driver
   application:
     name: ToDoList
@@ -13,7 +13,7 @@ spring:
       mode: always
 
 server:
-  port : 8888
+  port: 8888
 
 max:
   limit:
